--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "!ios/build",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__"
+    "!**/__mocks__",
+    "src/assets"
   ],
   "scripts": {
     "test": "jest",
@@ -55,8 +56,9 @@
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/chess.js": "^0.11.2",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react": "^18.3.12",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
@@ -65,23 +67,22 @@
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "0.76.9",
     "react-native-builder-bob": "^0.18.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-    "react-native-reanimated": "~2.4.1",
-    "react-native-gesture-handler": "~2.3.0"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*",
-    "react-native-gesture-handler": ">= 2.0.0",
-    "react-native-reanimated": ">= 2.3.0"
+    "react": ">=18.0.0",
+    "react-native": ">=0.73.0",
+    "react-native-gesture-handler": ">=2.14.0",
+    "react-native-reanimated": ">=3.8.0"
   },
   "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.0"
   },
   "jest": {
     "preset": "react-native",
@@ -116,8 +117,11 @@
     "root": true,
     "extends": [
       "@react-native-community",
-      "prettier"
+      "prettier",
+      "plugin:@typescript-eslint/recommended"
     ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
       "prettier/prettier": [
         "error",
@@ -128,7 +132,12 @@
           "trailingComma": "es5",
           "useTabs": false
         }
-      ]
+      ],
+      "no-undef": "off",
+      "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    },
+    "env": {
+      "node": true
     }
   },
   "eslintIgnore": [
